--- a/index.html
+++ b/index.html
@@ -3,133 +3,122 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Заявка на Moderator Discord</title>
+    <title>Заявка на модератора Ukraine GTA V</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
 </head>
 <body>
     <div class="container">
-        <h1 class="title">Заявка на Moderator Discord</h1>
-        <h2 class="subtitle">04</h2>
-        
-        <div id="page1" class="page">
-            <div class="criteria">
-                <h3>Критерії:</h3>
-                <ul>
-                    <li>✦ 16+ (можливі виключення до 15 років);</li>
-                    <li>✦ Досвід і знання функціоналу ігрового моду UKRAINE GTA;</li>
-                    <li>✦ Знання правил Discord серверу UKRAINE GTA;</li>
-                    <li>✦ Вміння працювати і кооперуватись в команді;</li>
-                    <li>✦ Клієнтоорієнтованість (комунікабельний, стриманий, скрупульозний);</li>
-                    <li>✦ Наявність мікрофону;</li>
-                    <li>✦ Мати мінімальні знання по функціоналу Discord.</li>
-                </ul>
-            </div>
-            <button id="startApplication" class="btn-blue">Подати заявку</button>
+        <div class="form-container">
+            <form id="application-form">
+                <div class="page" id="page1">
+                    <h1>Стань частиною команди модераторів Discord-сервера "Ukraine GTA V"!</h1>
+                    <p>👋 Вітаємо тебе! На зв'язку Senior Moderator – Kirill Phantom. Ми шукаємо активних та відповідальних людей для приєднання до нашої команди модераторів! Твої вміння та досвід важливі для нас, і ми впевнені, що разом з тобою створимо найкращу спільноту!</p>
+                    <!-- Додайте решту тексту вступу тут -->
+                    <button type="button" class="next-btn">Далі</button>
+                </div>
+
+                <div class="page" id="page2">
+                    <h2>Контактна інформація</h2>
+                    <div class="input-group">
+                        <img src="email.png" alt="Email" class="icon">
+                        <input type="email" name="email" required placeholder="Ваша електронна адреса">
+                    </div>
+                    <div class="input-group">
+                        <img src="user.png" alt="User" class="icon">
+                        <input type="text" name="fullName" required placeholder="Прізвище, ім'я та по батькові">
+                    </div>
+                    <div class="input-group">
+                        <img src="calendar.png" alt="Age" class="icon">
+                        <input type="number" name="age" required placeholder="Ваш вік">
+                    </div>
+                    <div class="input-group">
+                        <img src="telegram.png" alt="Telegram" class="icon">
+                        <input type="text" name="telegram" required placeholder="Ваш Telegram">
+                    </div>
+                    <div class="input-group">
+                        <img src="discord.png" alt="Discord" class="icon">
+                        <input type="text" name="discord" required placeholder="Ваш Discord">
+                    </div>
+                    <button type="button" class="prev-btn">Назад</button>
+                    <button type="button" class="next-btn">Далі</button>
+                </div>
+
+                <div class="page" id="page3">
+                    <h2>Про себе</h2>
+                    <div class="input-group">
+                        <img src="scale.png" alt="Adequacy" class="icon">
+                        <input type="range" name="adequacy" min="1" max="10" required>
+                        <label>Як би ви оцінили свою адекватність?</label>
+                    </div>
+                    <div class="input-group">
+                        <img src="stress.png" alt="Stress" class="icon">
+                        <input type="range" name="stressResistance" min="1" max="10" required>
+                        <label>Як би ви оцінили свою стресостійкість?</label>
+                    </div>
+                    <div class="input-group">
+                        <img src="learning.png" alt="Learning" class="icon">
+                        <input type="range" name="learningSpeed" min="1" max="10" required>
+                        <label>Наскільки швидко засвоюєте новий матеріал?</label>
+                    </div>
+                    <div class="input-group">
+                        <img src="positive-negative.png" alt="Traits" class="icon">
+                        <textarea name="traits" required placeholder="Назвіть три позитивні та три негативні риси вашого характеру"></textarea>
+                    </div>
+                    <div class="input-group">
+                        <img src="ban.png" alt="Bans" class="icon">
+                        <div>
+                            <label>Чи були у вас блокування на Discord-серверах Ukraine GTA / Ukraine GTA V?</label>
+                            <input type="radio" name="hadBans" value="yes" required> Так
+                            <input type="radio" name="hadBans" value="no" required> Ні
+                        </div>
+                    </div>
+                    <div id="banReason" class="input-group" style="display: none;">
+                        <textarea name="banReason" placeholder="Якщо так, то за що саме?"></textarea>
+                    </div>
+                    <div class="input-group">
+                        <img src="moderator.png" alt="Experience" class="icon">
+                        <div>
+                            <label>Чи займали ви раніше посаду модератора Discord або схожу посаду?</label>
+                            <input type="radio" name="hadExperience" value="yes" required> Так
+                            <input type="radio" name="hadExperience" value="no" required> Ні
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <img src="team.png" alt="Team" class="icon">
+                        <div>
+                            <label>Чи вважаєте ви себе командним гравцем?</label>
+                            <input type="radio" name="isTeamPlayer" value="yes" required> Так
+                            <input type="radio" name="isTeamPlayer" value="no" required> Ні
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <img src="microphone.png" alt="Microphone" class="icon">
+                        <div>
+                            <label>Чи маєте ви мікрофон для виконання щоденної норми на посаді Moderator Discord в голосовому каналі?</label>
+                            <input type="radio" name="hasMicrophone" value="yes" required> Так
+                            <input type="radio" name="hasMicrophone" value="no" required> Ні
+                        </div>
+                    </div>
+                    <div class="input-group">
+                        <img src="hours.png" alt="Hours" class="icon">
+                        <input type="number" name="hoursAvailable" required placeholder="Скільки годин можете приділяти посаді M.D?">
+                    </div>
+                    <div class="input-group">
+                        <img src="blacklist.png" alt="Blacklist" class="icon">
+                        <div>
+                            <label>Чи готові ви отримати ЧС (чорний список) на посаду модератора Discord у разі, якщо не пройдете стажування протягом 14 днів?</label>
+                            <input type="radio" name="acceptBlacklist" value="yes" required> Так
+                            <input type="radio" name="acceptBlacklist" value="no" required> Ні
+                        </div>
+                    </div>
+                    <button type="button" class="prev-btn">Назад</button>
+                    <button type="submit" class="submit-btn">Відправити</button>
+                    <button type="button" class="clear-btn">Очистити</button>
+                </div>
+            </form>
         </div>
-
-        <form id="application-form">
-            <div id="page2" class="page">
-                <div class="form-group">
-                    <label for="email">📧 Електронна адреса:</label>
-                    <input type="email" id="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="fullName">👤 Ваше прізвище, ім'я, по-батькові:</label>
-                    <input type="text" id="fullName" required>
-                </div>
-                <div class="form-group">
-                    <label for="age">📅 Ваш вік:</label>
-                    <input type="number" id="age" min="15" max="99" required>
-                </div>
-                <div class="form-group">
-                    <label for="telegram">✈️ Ваш Telegram:</label>
-                    <input type="text" id="telegram" required>
-                </div>
-                <div class="form-group">
-                    <label for="discord">👾 Ваш Discord:</label>
-                    <input type="text" id="discord" required>
-                </div>
-            </div>
-
-            <div id="page3" class="page">
-                <div class="form-group">
-                    <label for="adequacy">✅ Наскільки ви оцініте свою адекватність?</label>
-                    <input type="range" id="adequacy" min="1" max="10" value="5">
-                    <span id="adequacy-value">5</span>
-                </div>
-                <div class="form-group">
-                    <label for="stress">🧘 Наскільки ви оцініте свою стресостійкість?</label>
-                    <input type="range" id="stress" min="1" max="10" value="5">
-                    <span id="stress-value">5</span>
-                </div>
-                <div class="form-group">
-                    <label for="learning">📚 Наскільки швидко ви засвоюєте новий матеріал?</label>
-                    <input type="range" id="learning" min="1" max="10" value="5">
-                    <span id="learning-value">5</span>
-                </div>
-                <div class="form-group">
-                    <label for="traits">💭 Назвіть позитивні 3 та 3 негативні риси Вашого характеру:</label>
-                    <textarea id="traits" required></textarea>
-                </div>
-            </div>
-
-            <div id="page4" class="page">
-                <div class="form-group">
-                    <label for="hadBans">🚫 Чи були у вас блокування на Discord-серверах Ukraine GTA / Ukraine GTA V?</label>
-                    <select id="hadBans" required>
-                        <option value="">Оберіть відповідь</option>
-                        <option value="yes">Так</option>
-                        <option value="no">Ні</option>
-                    </select>
-                </div>
-                <div id="banReason" class="form-group" style="display: none;">
-                    <label for="banReasonText">Вкажіть причину блокування:</label>
-                    <textarea id="banReasonText"></textarea>
-                </div>
-                <div class="form-group">
-                    <label for="wasModeratorBefore">👮 Чи займали ви раніше посаду модератора Discord або схожу посаду?</label>
-                    <select id="wasModeratorBefore" required>
-                        <option value="">Оберіть відповідь</option>
-                        <option value="yes">Так</option>
-                        <option value="no">Ні</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="isTeamPlayer">👥 Чи вважаєте ви себе командним гравцем?</label>
-                    <select id="isTeamPlayer" required>
-                        <option value="">Оберіть відповідь</option>
-                        <option value="yes">Так</option>
-                        <option value="no">Ні</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="hasMicrophone">🎙️ Чи маєте ви мікрофон для виконання щоденної норми?</label>
-                    <select id="hasMicrophone" required>
-                        <option value="">Оберіть відповідь</option>
-                        <option value="yes">Так</option>
-                        <option value="no">Ні</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="hoursAvailable">⏰ Скільки годин можете приділяти посаді M.D?</label>
-                    <input type="text" id="hoursAvailable" required>
-                </div>
-                <div class="form-group">
-                    <label for="acceptsBlacklist">📝 Чи готові ви отримати ЧС на посаду модератора Discord у разі, якщо не пройдете стажування протягом 14 днів?</label>
-                    <select id="acceptsBlacklist" required>
-                        <option value="">Оберіть відповідь</option>
-                        <option value="yes">Так</option>
-                        <option value="no">Ні</option>
-                    </select>
-                </div>
-            </div>
-
-            <div class="button-group">
-                <button type="button" id="prevPage" class="btn-red">Назад</button>
-                <button type="button" id="nextPage" class="btn-blue">Далі</button>
-                <button type="submit" id="submit" class="btn-blue" style="display: none;">Відправити заявку</button>
-            </div>
-        </form>
     </div>
     <script src="script.js"></script>
 </body>
